[openrewrite] StringRulesRecipes