@@ -1,5 +1,5 @@
 /*
- * Copyright 2023-2024 DiffPlug
+ * Copyright 2023-2025 DiffPlug
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -100,7 +100,7 @@ public class KtLintCompat1Dot0Dot0Adapter implements KtLintCompatAdapter {
 		} else {
 			editorConfigOverride = createEditorConfigOverride(
 					editorConfig,
-					allRuleProviders.stream().map(RuleProvider::createNewRuleInstance).collect(Collectors.toList()),
+					allRuleProviders.stream().map(RuleProvider::createNewRuleInstance).toList(),
 					editorConfigOverrideMap);
 		}
 
