@@ -15,6 +15,7 @@
  */
 package com.diffplug.gradle.spotless;
 
+import static com.diffplug.common.base.Strings.isNullOrEmpty;
 import static org.junit.jupiter.api.Assertions.fail;
 
 import java.io.File;
@@ -23,7 +24,6 @@ import java.util.List;
 import java.util.ListIterator;
 import java.util.function.BiConsumer;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 import org.gradle.api.provider.Provider;
 import org.gradle.testkit.runner.BuildResult;
@@ -159,7 +159,7 @@ public class GradleIntegrationHarness extends ResourceHarness {
 		TreeDef<File> treeDef = TreeDef.forFile(Errors.rethrow());
 		List<File> files = TreeStream.depthFirst(treeDef, rootFolder())
 				.filter(File::isFile)
-				.collect(Collectors.toList());
+				.toList();
 
 		ListIterator<File> iterator = files.listIterator(files.size());
 		int rootLength = rootFolder().getAbsolutePath().length() + 1;
@@ -210,13 +210,13 @@ public class GradleIntegrationHarness extends ResourceHarness {
 	public static List<String> outcomes(BuildResult build, TaskOutcome outcome) {
 		return build.taskPaths(outcome).stream()
 				.filter(s -> !s.equals(":spotlessInternalRegisterDependencies"))
-				.collect(Collectors.toList());
+				.toList();
 	}
 
 	public static List<BuildTask> outcomes(BuildResult build) {
 		return build.getTasks().stream()
 				.filter(t -> !t.getPath().equals(":spotlessInternalRegisterDependencies"))
-				.collect(Collectors.toList());
+				.toList();
 	}
 
 	static String buildResultToString(BuildResult result) {
@@ -229,7 +229,7 @@ public class GradleIntegrationHarness extends ResourceHarness {
 
 	private static File getTestKitDir() {
 		String gradleUserHome = System.getenv("GRADLE_USER_HOME");
-		if (gradleUserHome == null || gradleUserHome.isEmpty()) {
+		if (isNullOrEmpty(gradleUserHome)) {
 			gradleUserHome = new File(System.getProperty("user.home"), ".gradle").getAbsolutePath();
 		}
 		return new File(gradleUserHome, "testkit");
